old_tests/parser/invalid/005-if-with-two-elses.man
def main()
    if foo()
        bar()
    else
        baz()
    else
        foobarbaz()
    end
end
